# Doddle

./: .gitattributes  .gitignore  Experimental.ipynb  Getting Started.ipynb  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: python-app.yml
src/doddle/: __init__.py  __main__.py  benchmarking.py  boards.py  cli.py  controllers.py  decision.py  engine.py  enums.py  exceptions.py  facade.py  factory.py  game.py  guess.py  histogram.py  proto.py  quordle.py  scoring.py  simul_solver.py  simulation.py  solver.py  tree.py  view_models.py  views.py  words.py
src/doddle/dictionaries/: dictionary-answers-official.json  dictionary-full-official.json
src/nerdle/: __main__.py  benchmark.py  cli.py  controller_factory.py  controllers.py  dictionary-answers-official.json  dictionary-full-official.json  dictionary.py  exceptions.py  factory.py  histogram.py  model.py  scoring.py  simulation.py  solver.py  view.py  view_models.py  views.py  words.py
src/wordle/: cli.py  dictionary.py  words.py  words6.py
tests/: expected_dot_code.gv  fake_dictionary.py  test_benchmarking.py  test_boards.py  test_cli.py  test_controllers.py  test_decision.py  test_engine.py  test_enums.py  test_facade.py  test_factory.py  test_game.py  test_graph.py  test_guess.py  test_histogram.py  test_model.py  test_scoring.py  test_simul_solver.py  test_solver.py  test_tree.py  test_views.py  test_words.py  wordle_bot_file.txt  wordle_bot_file_invalid.txt
tutorial/: 01 Getting Started.ipynb  02 Benchmarking & Decision Trees.ipynb  03 Exhaustive Search.ipynb  Benchmarking & Decision Trees.ipynb  Getting Started.ipynb
