[build-system]
requires = ["setuptools>=42","wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 105

[tool.isort]
profile = "black"
line_length = 105

[tool.coverage.paths]
source = [
    "src",
    "*/site-packages"
]

[tool.pytest.ini_options]
addopts = "-v"
filterwarnings = [
    "ignore:.*The 'u' format is deprecated.*:DeprecationWarning", # https://github.com/mhammond/pywin32/issues/1802
]

[tool.coverage.run]
branch = false

[tool.coverage.report]
skip_covered = false