[metadata]
name = nerdle
version = 0.0.1
author = Alex Cross
author_email = AlexJCross90@gmail.com
description = nerdle: A nerds approach to playing Wordle
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/CatchemAl/Nerdle
project_urls =
    Bug Tracker = https://github.com/CatchemAl/Nerdle/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
include_package_data = True
python_requires = >=3.8
packages = find:
package_dir =
    = src
install_requires =
    numba
    numpy

[options.packages.find]
where = src

[options.entry_points]
console_scripts = 
    nerdle = nerdle.cli:main

[options.extras_require]
dev = 
    black
    flake8
    isort
    mypy
    pytest-cov
    tox

[flake8]
ignore =
    E203
    W503
extend-exclude = tests/*.py,.venv/*.py,.tox/*.py
filename = ./src/*.py
max-line-length = 100