[metadata]
name = doddle
version = 1.1.0
author = Alex Cross
author_email = AlexJCross90@gmail.com
description = doddle: Make Wordle A Doddle
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/CatchemAl/Doddle
project_urls =
    Bug Tracker = https://github.com/CatchemAl/Doddle/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
include_package_data = True
python_requires = >=3.8
packages = find:
package_dir =
    = src
install_requires =
    numba
    numpy
    colorama

[options.packages.find]
where = src

[options.entry_points]
console_scripts = 
    doddle = doddle.cli:main

[options.extras_require]
dev = 
    black
    flake8
    isort
    mypy
    pytest-cov
    tox

[flake8]
ignore =
    E203
    W503
extend-exclude = tests/*.py,.venv/*.py,.tox/*.py
filename = ./src/*.py
max-line-length = 105